correcoes feitas, trabalho entregue

--- a/Estatistica_Lista3/questoes/questoes11-19.tex
+++ b/Estatistica_Lista3/questoes/questoes11-19.tex
@@ -28,15 +28,15 @@
 
             $H_1$ : $\mu$ < 53 
 
-            Z $\rightarrow$ 2.33 (RA)
+            Z > -2.33 (RA)
 
-            Z $\leftarrow$ 2.33 (RR)
+            Z < -2.33 (RR)
 
             \begin{formula7}
                 {Z}{45}{53}{14}{30}{-3.13}
             \end{formula7}
 
-            P(Z $\rightarrow$ 3.13) = 0.0009 ou 0.09\%
+            P(Z < -3.13) = 0.0009 ou 0.09\%
         \item 
 
             \begin{formula1}
@@ -89,12 +89,12 @@
 
             $H_1$ : P > 30 
         
-            T > 1.6766 (RR)
+            Z > -1.6766 (RR)
 
-            T < 1.6766 (RA)
+            Z < -1.6766 (RA)
 
             \begin{formula8}
-                {T}{0.08}{0.1}{\sqrt{0.1 * 0.9}}{100}{-0.67}
+                {Z}{0.08}{0.1}{\sqrt{0.1 * 0.9}}{100}{-0.67}
             \end{formula8}
 
         \item 
@@ -120,8 +120,8 @@
 
         \item 
     
-            A afirmação da gerência para estar de certa forma válida já que o intervalo de 
-            confiança tem máximo de 527.33
+            Sobre a afirmação da gerência: ela parece estar correta, devido ao fato que ao 
+            realizar os cálculos, o intervalo de confiança tem no máximo 527.33
 
     \end{enumerate}
 \end{question}
@@ -146,9 +146,6 @@
                 {T}{6.58}{6}{1.62}{12}{1.24}
             \end{formula7}
 
-            Não rejeita $H_o$, ao nível alfa 1\%, não há evidências sobre o número médio de 
-            acidentes no cruzamento ser superior à 6.
-
             P(T > 1.24) = 0.1204 ou 12.04\%
 
     \end{enumerate}
@@ -169,7 +166,7 @@
             $T_c$ : 1.282
 
             \begin{formula7}
-                {T}{1.55}{1.5}{0.32}{50}{1.104854346}
+                {Z}{1.55}{1.5}{0.32}{50}{1.104854346}
             \end{formula7}
 
         \item 
@@ -200,9 +197,6 @@
             \begin{formula7}
                 {T}{14.69}{15}{5.14}{11}{-0.20}
             \end{formula7}
-
-            Não rejeita Ho, ao nível alfa 5\%, não há evidências sobre a média do tempo 
-            levado por fumantes para desistir definitivamente ser 15 anos. 
 
             P(T>0,2 ou T< -0,2) = 0.8455 ou 84.55\%
         \item 
@@ -248,10 +242,7 @@
                 {T}{10.13}{12}{1.92}{30}{-5.33}
             \end{formula7}
 
-            Rejeita Ho, ao nível alfa 10\%, há evidências para rejeitar
-            a média do lixo descartado ser 12 quilos. 
-
-            P(T>5,33 ou T< -5,33) = 0,00001 ou 0,001\%
+            P(T> 5.33 ou T < -5.33) = 0,00001 ou 0,001\%
 
     \end{enumerate}
 \end{question}
