lista de estatistica 4 completa

--- a/Estatistica_Lista4/questoes/questao1.tex
+++ b/Estatistica_Lista4/questoes/questao1.tex
@@ -32,7 +32,7 @@
             {66640}{124}{36491200}{67267}{0.9907}
         \end{formula5}
 
-        Interpretação do resultado: Há uma forte correlação positiva.
+        \textbf{Interpretação do resultado:} Há uma forte correlação positiva.
 
         \item  
 
@@ -40,9 +40,9 @@
             {66640}{124}{537.42}{1405}{3.75}{-610.325}
         \end{formula9}
 
-        Interpretação do resultado: 
+        \textbf{Interpretação do resultado:}
 
-        $\hat{\beta}0$ : Não há interpretação prática.
+        $\hat{\beta}0$ : Não há interpretação prática. \\
         $\hat{\beta}1$ : Para cada ano, existe um acréscimo ná média em 537.42 palavras
         no vocabulário de cada criança. 
 
@@ -50,9 +50,12 @@
 
         $R^2$ = $(0.9907)^2$ = 0.9815 ou 98.15\%
 
-        Interpretação do resultado: 
+        \textbf{Interpretação do resultado:} 
 
-        
+        A variabilidade no número de palavras no vocabulário de uma criança de 98.15\%,
+        pode ser explicado pela idade. Os restantes 1.85\% não possuem explicação clara,
+        logo pode ser resultado de um possível erro, ou outra variável que não foi incluída
+        na questão.
 
         \item 
 
