--- a/Estatistica_Lista4/questoes/questao2.tex
+++ b/Estatistica_Lista4/questoes/questao2.tex
@@ -32,15 +32,30 @@
             {6600}{898}{56982}{7153.30}{0.9226}
         \end{formula5}
 
+        \textbf{Interpretação do resultado:} Há uma forte correlação positiva.
+
         \item  
 
         \begin{formula9}
             {6600}{898}{7.35}{68.54}{4.62}{34.58}
         \end{formula9}
 
+        \textbf{Interpretação do resultado:}
+
+        $\hat{\beta}0$ : Para os alunos que não possui horas de estudo, é esperado uma nota média de 
+        34.58 pontos. \\
+        $\hat{\beta}1$ : Para cada hora de estudo adicional, terá um aumento na média de 7.35 
+        pontos na prova.
+
         \item  
 
         $R^2$ = $(0.9226)^2$ = 0.8512 ou 85.12\%
+
+        \textbf{Interpretação do resultado:} 
+
+        A variabilidade da pontuação do teste de 85.12\%, pode ser explicado pelas horas de estudo. Os 
+        restantes 14.88\% não possuem explicação clara, logo pode ser resultado de um possível 
+        erro, ou outra variável que não foi incluído na questão.
 
         \item 
 
