--- a/Estatistica_Lista4/questoes/questao3.tex
+++ b/Estatistica_Lista4/questoes/questao3.tex
@@ -32,15 +32,30 @@
             {-4344}{1068}{25568}{5225.57}{-0.8313}
         \end{formula5}
 
+        \textbf{Interpretação do resultado:} Há uma forte correlação negativa.
+
         \item  
 
         \begin{formula9}
             {-4344}{1068}{-4.07}{75.66}{4.5}{93.97}
         \end{formula9}
 
+        \textbf{Interpretação do resultado:}
+
+        $\hat{\beta}0$ : Para os alunos que não gastam tempo nenhum na frente da televisão, é esperado que 
+        uma nota média de 93.97 pontos na prova de segunda. \\
+        $\hat{\beta}1$ : Para cada hora adicional na frente da televisão, é esperado um decréscimo na 
+        média em 4.07 pontos na nota.
+
         \item  
 
         $R^2$ = $(0.8313)^2$ = 0.691 ou 69.10\%
+
+        \textbf{Interpretação do resultado:} 
+
+        A variabilidade da pontuação do teste de 69.10\%, pode ser explicado pelas horas na
+        frente da televisão. Os restantes 30.90\% não possuem explicação clara, logo pode ser 
+        resultado de um possível erro, ou outra variável que não foi incluída na questão.
 
         \item 
 
