--- a/Estatistica_Lista4/questoes/questao1.tex
+++ b/Estatistica_Lista4/questoes/questao1.tex
@@ -55,7 +55,7 @@
         A variabilidade no número de palavras no vocabulário de uma criança de 98.15\%,
         pode ser explicado pela idade. Os restantes 1.85\% não possuem explicação clara,
         logo pode ser resultado de um possível erro, ou outra variável que não foi incluída
-        na questão.
+        no estudo da questão.
 
         \item 
 
