--- a/Estatistica_Lista4/questoes/questao2.tex
+++ b/Estatistica_Lista4/questoes/questao2.tex
@@ -42,7 +42,7 @@
 
         \textbf{Interpretação do resultado:}
 
-        $\hat{\beta}0$ : Para os alunos que não possui horas de estudo, é esperado uma nota média de 
+        $\hat{\beta}0$ : Para os alunos que não possui horas de estudo é esperado uma nota média de 
         34.58 pontos. \\
         $\hat{\beta}1$ : Para cada hora de estudo adicional, terá um aumento na média de 7.35 
         pontos na prova.
@@ -55,7 +55,7 @@
 
         A variabilidade da pontuação do teste de 85.12\%, pode ser explicado pelas horas de estudo. Os 
         restantes 14.88\% não possuem explicação clara, logo pode ser resultado de um possível 
-        erro, ou outra variável que não foi incluído na questão.
+        erro, ou outra variável que não foi incluído no estudo da questão.
 
         \item 
 
