--- a/Estatistica_Lista4/questoes/questao3.tex
+++ b/Estatistica_Lista4/questoes/questao3.tex
@@ -42,7 +42,7 @@
 
         \textbf{Interpretação do resultado:}
 
-        $\hat{\beta}0$ : Para os alunos que não gastam tempo nenhum na frente da televisão, é esperado que 
+        $\hat{\beta}0$ : Para os alunos que não gastam tempo nenhum na frente da televisão é esperado
         uma nota média de 93.97 pontos na prova de segunda. \\
         $\hat{\beta}1$ : Para cada hora adicional na frente da televisão, é esperado um decréscimo na 
         média em 4.07 pontos na nota.
@@ -55,7 +55,7 @@
 
         A variabilidade da pontuação do teste de 69.10\%, pode ser explicado pelas horas na
         frente da televisão. Os restantes 30.90\% não possuem explicação clara, logo pode ser 
-        resultado de um possível erro, ou outra variável que não foi incluída na questão.
+        resultado de um possível erro, ou outra variável que não foi incluída no estudo da questão.
 
         \item 
 
@@ -66,7 +66,7 @@
         $\\$
 
         \begin{formulaA}
-            {93.97}{4.07}{9}{57.34}
+            {93.97}{-4.07}{9}{57.34}
         \end{formulaA}
 
         \begin{formula2}
